# summer-school-scientific-vis

./: .gitignore  README.md  Scientific_Vis.qmd  _organisation.qmd  index.html  pyproject.toml
.github/workflows/: deploy_slides.yml  python_qc.yaml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  ex1-checkpoint.py
notebook/: Scientific_Visualisation.ipynb  Untitled.ipynb
presentation/: README.html  README.md  Scientific_Vis.html  Scientific_Vis.qmd  _colormaps.qmd  _organisation.qmd  custom_theme.scss  index.html  references.bib
scripts/: ex1.py  ex2.py
